Added / Corrected heap and permgen size in startup scripts